<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Stop</string>
    <string name="homepage_subheading">Select a Dashboard..</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="go_button">Go</string>
    <string name="bus_eireann_cd">Bus Eireann logo</string>
    <string name="luas_cd">Luas logo</string>
    <string name="app_cd">Application logo</string>
    <string name="irish_rail_cd">Irish Rail logo</string>
    <string name="dublin_bus_cd">Dublin Bus logo</string>
    <string name="stop_id_hint">Choose a Departure Stop..</string>
    <string name="route_header">Route</string>
    <string name="destination_header">Destination</string>
    <string name="duetime_header">Due (mins)</string>
    <string name="search">Search by Stop ID or Name..</string>
    <string name="title_activity_live_map">LiveMap</string>
    <string name="tab_all_stops">All Stops</string>
    <string name="tab_favourites">Favourites</string>
    <string name="title_activity_user_manual">UserManualActivity</string>
    <string name="light_theme">Light</string>
	<string name="dark_theme">Dark</string>
	<string name="change_theme_cd">Change Theme Button</string>
	<string name="user_guide_cd">User Guide Button</string>
</resources>
