<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
    	android:layout_width="match_parent"
      	android:layout_height="0dp"
    	android:orientation="horizontal" 
     	android:layout_weight="0.2"
     	android:background="@drawable/rounded_corner_orange" >
                       	
     	<TextView 
      		android:text="@string/route_header"
         	android:layout_width="0dp"
          	android:layout_height="match_parent"
        	android:layout_weight="0.33"
        	style="@style/list_view_heading">
        </TextView>
                        
     	<TextView 
          	android:text="@string/destination_header"
           	android:layout_width="0dp"
          	android:layout_height="match_parent"
          	android:layout_weight="0.33"
           	style="@style/list_view_heading">
      	</TextView>
                        
       	<TextView 
       		android:text="@string/duetime_header"
          	android:layout_width="0dp"
           	android:layout_height="match_parent"
          	android:layout_weight="0.33"
           	style="@style/list_view_heading">
       	</TextView>
                         
                         
	</LinearLayout>
                	
 	<ListView
     	android:id="@+id/stopInfoListView"
      	android:layout_width="match_parent"
       	android:layout_height="0dp"
     	android:paddingTop="10dp"
   		android:layout_weight="0.8"
      	android:divider="@color/orange"
     	android:dividerHeight="1dp">
  
	</ListView>
    

</LinearLayout>
