<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/background"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:paddingBottom="5dp" >

	    <ImageView
	        android:id="@+id/busEireannLogo"
	        android:layout_width="105dp"
	        android:layout_height="90dp"
	        android:layout_weight="0.00"
	        android:contentDescription="@string/bus_eireann_cd"
	        android:paddingRight="5dp"
	        android:paddingLeft="5dp"
	        android:src="@drawable/bus_eireann" 
			android:background="@drawable/rounded_corner_dark_grey" 
	        />

	    <ImageView
	        android:id="@+id/luasLogo"
	        android:layout_width="91dp"
	        android:layout_height="89dp"
	        android:contentDescription="@string/luas_cd"
	        android:padding="1dp"
	        android:src="@drawable/luas"
	        android:background="@color/dark_grey"  />

	    <ImageView
	        android:id="@+id/carsLogo"
	        android:layout_width="105dp"
	        android:layout_height="match_parent"
	        android:contentDescription="@string/app_cd"
	        android:padding="1dp"
	        android:src="@drawable/cars"
	        android:background="@color/dark_grey"  />

	    <ImageView
	        android:id="@+id/irishRailLogo"
	        android:layout_width="97dp"
	        android:layout_height="match_parent"
	        android:contentDescription="@string/irish_rail_cd"
	        android:padding="1dp"
	        android:src="@drawable/irish_rail"
	        android:background="@color/dark_grey" />

	    <ImageView
	        android:id="@+id/dublinBusLogo"
	        android:layout_width="97dp"
	        android:layout_height="90dp"
	        android:contentDescription="@string/dublin_bus_cd"
	        android:padding="1dp"
	        android:src="@drawable/dublin_bus" 
	        android:background="@color/dark_grey" />
	</LinearLayout>

	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
   		android:baselineAligned="false"  >

    	<LinearLayout
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_weight="0.35"
        	android:orientation="vertical"
        	android:layout_marginRight="5dp" >
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal" 
                android:layout_weight="0.45"
                android:gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.3"
                    android:gravity="center_horizontal" >

                    <DigitalClock
                        android:id="@+id/digitalClock1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="40dp"
                        style="@style/stopTextView"
                        android:minHeight="45dp"
                        android:textColor="@color/orange" />

                    <TextView
                        android:id="@+id/stop"
                        style="@style/stopTextView"
                        android:layout_width= "match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:minHeight="45dp"
                        android:padding="5dp" />

                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="0dp"
                	android:layout_height="match_parent"
                	android:orientation="vertical" 
                	android:layout_weight="0.7"
                	android:background="@drawable/rounded_corner_orange" >
                	
                     <LinearLayout
                    	android:layout_width="match_parent"
                		android:layout_height="0dp"
                		android:orientation="horizontal" 
                		android:layout_weight="0.2"
                		android:background="@drawable/rounded_corner_orange" >
                       	
                        <TextView 
                            android:text="@string/route_header"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.33"
                            style="@style/list_view_heading">
                        </TextView>
                        
                        <TextView 
                            android:text="@string/destination_header"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.33"
                            style="@style/list_view_heading"
                            >
                        </TextView>
                        
                        <TextView 
                            android:text="@string/duetime_header"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.33"
                            style="@style/list_view_heading">
                        </TextView>
                         
                         
                     </LinearLayout>
                	
                	<ListView
                    	android:id="@+id/stopInfoListView"
                    	android:layout_width="match_parent"
                   		android:layout_height="0dp"
                    	android:paddingTop="10dp"
                    	android:layout_weight="0.8"
                    	android:divider="@color/orange"
        				android:dividerHeight="1dp">
                    
                	</ListView>
                </LinearLayout>
				
            </LinearLayout>

        	<WebView
           		android:id="@+id/webView1"
            	android:layout_width="match_parent"
            	android:layout_height="0dp"
            	android:layout_weight="0.55" />
        
    	</LinearLayout>
    	
    	<LinearLayout
    	    android:background="@drawable/rounded_corner_orange"
    	    android:layout_width="match_parent"
    	    android:layout_height="match_parent"
    	    android:layout_weight="0.65"
    	    android:padding="4dp">
    		<WebView
    	   		android:id="@+id/twitterFeed"
    	    	android:layout_width="match_parent"
    	    	android:layout_height="match_parent"/>
    	</LinearLayout>

	</LinearLayout>

</LinearLayout>